--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
         <ul class="header-contact list">
           <li class="contact-item">
             <a class="email link" href="mailto:info@devstudio.com">
-            <svg class="envelope-icon"><use href="images/symbol-defs.svg#icon-envelope"></use></svg>info@devstudio.com</a>
+            <svg class="envelope-icon"><use href="images/icons..svg#icon-envelope"></use></svg>info@devstudio.com</a>
           </li>
           <li class="contact-item">
             <a class="phone link" href="tel:+380961111111">
-              <svg class="envelope-icon"><use href="images/symbol-defs.svg#icon-phone"></use></svg>+38 096 111 11 11</a>
+              <svg class="envelope-icon"><use href="images/icons..svg#icon-phone"></use></svg>+38 096 111 11 11</a>
           </li>
         </ul>
       </div>
@@ -62,28 +62,28 @@
           <h2 class="visually-hidden">Преимущества</h2>
           <ul class="advantages-list list">
             <li class="advantages-item">
-              <div class="advantages-block"><svg class="advantages-icons"><use href="./images/symbol-defs.svg#icon-antene-1"></use></svg></div>
+              <div class="advantages-block"><svg class="advantages-icons"><use href="images/icons..svg#icon-antenna"></use></svg></div>
               <h3 class="advantage-title">Внимание к деталям</h3>
               <p class="advantage-text">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
             <li class="advantages-item">
-              <div class="advantages-block"><svg class="advantages-icons"><use href="./images/symbol-defs.svg#icon-clock-1"></use></svg></div>
+              <div class="advantages-block"><svg class="advantages-icons"><use href="images/icons..svg#icon-clock"></use></svg></div>
               <h3 class="advantage-title">Пунктуальность</h3>
               <p class="advantage-text">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
             <li class="advantages-item">
-              <div class="advantages-block"><svg class="advantages-icons"><use href="./images/symbol-defs.svg#icon-pc"></use></svg></div>
+              <div class="advantages-block"><svg class="advantages-icons"><use href="images/icons..svg#icon-diagram"></use></svg></div>
               <h3 class="advantage-title">Планирование</h3>
               <p class="advantage-text">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
             <li class="advantages-item">
-              <div class="advantages-block"><svg class="advantages-icons"><use href="./images/symbol-defs.svg#icon-austronauft-1"></use></svg></div>
+              <div class="advantages-block"><svg class="advantages-icons"><use href="images/icons..svg#icon-astronaut"></use></svg></div>
               <h3 class="advantage-title">Cовременные технологии</h3>
               <p class="advantage-text">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -125,6 +125,20 @@
                 <h3 class="employees">Игорь Демьяненко</h3>
                 <p class="position_title">Product designer</p>
               </div>
+              <ul class="team-social list">
+                <li class="team-social-icons"><a href="" class="social-link link">
+                  <svg class="employees-soc-icons" width="20" height="20"><use href="images/icons..svg#icon-instagram"></use></svg>
+                </a></li>
+                <li class="team-social-icons"><a href="" class="social-link link">
+                  <svg class="employees-soc-icons" width="20" height="20"><use href="images/icons..svg#icon-twitter"></use></svg>
+                </a></li>
+                <li class="team-social-icons"><a href="" class="social-link link">
+                  <svg class="employees-soc-icons" width="20" height="20"><use href="images/icons..svg#icon-facebook"></use></svg>
+                </a></li>
+                <li class="team-social-icons"><a href="" class="social-link link">
+                  <svg class="employees-soc-icons" width="20" height="20"><use href="images/icons..svg#icon-linkedin"></use></svg>
+                </a></li>
+              </ul>
             </li>
             <li class="team-item">
               <img
@@ -137,6 +151,20 @@
                 <h3 class="employees">Ольга Репина</h3>
                 <p class="position_title">Frontend developer</p>
               </div>
+              <ul class="team-social list">
+                <li class="team-social-icons"><a href="" class="social-link link">
+                  <svg class="employees-soc-icons" width="20" height="20"><use href="images/icons..svg#icon-instagram"></use></svg>
+                </a></li>
+                <li class="team-social-icons"><a href="" class="social-link link">
+                  <svg class="employees-soc-icons" width="20" height="20"><use href="images/icons..svg#icon-twitter"></use></svg>
+                </a></li>
+                <li class="team-social-icons"><a href="" class="social-link link">
+                  <svg class="employees-soc-icons" width="20" height="20"><use href="images/icons..svg#icon-facebook"></use></svg>
+                </a></li>
+                <li class="team-social-icons"><a href="" class="social-link link">
+                  <svg class="employees-soc-icons" width="20" height="20"><use href="images/icons..svg#icon-linkedin"></use></svg>
+                </a></li>
+              </ul>
             </li>
             <li class="team-item">
               <img
@@ -149,6 +177,20 @@
                 <h3 class="employees">Николай Тарасов</h3>
                 <p class="position_title">Marketing</p>
               </div>
+              <ul class="team-social list">
+                <li class="team-social-icons"><a href="" class="social-link link">
+                  <svg class="employees-soc-icons" width="20" height="20"><use href="images/icons..svg#icon-instagram"></use></svg>
+                </a></li>
+                <li class="team-social-icons"><a href="" class="social-link link">
+                  <svg class="employees-soc-icons" width="20" height="20"><use href="images/icons..svg#icon-twitter"></use></svg>
+                </a></li>
+                <li class="team-social-icons"><a href="" class="social-link link">
+                  <svg class="employees-soc-icons" width="20" height="20"><use href="images/icons..svg#icon-facebook"></use></svg>
+                </a></li>
+                <li class="team-social-icons"><a href="" class="social-link link">
+                  <svg class="employees-soc-icons" width="20" height="20"><use href="images/icons..svg#icon-linkedin"></use></svg>
+                </a></li>
+              </ul>
             </li>
             <li class="team-item">
               <img
@@ -161,10 +203,75 @@
                 <h3 class="employees">Михаил Ермаков</h3>
                 <p class="position_title">UI Designer</p>
               </div>
+              <ul class="team-social list">
+                <li class="team-social-icons"><a href="" class="social-link link">
+                  <svg class="employees-soc-icons" width="20" height="20"><use href="images/icons..svg#icon-instagram"></use></svg>
+                </a></li>
+                <li class="team-social-icons"><a href="" class="social-link link">
+                  <svg class="employees-soc-icons" width="20" height="20"><use href="images/icons..svg#icon-twitter"></use></svg>
+                </a></li>
+                <li class="team-social-icons"><a href="" class="social-link link">
+                  <svg class="employees-soc-icons" width="20" height="20"><use href="images/icons..svg#icon-facebook"></use></svg>
+                </a></li>
+                <li class="team-social-icons"><a href="" class="social-link link">
+                  <svg class="employees-soc-icons" width="20" height="20"><use href="images/icons..svg#icon-linkedin"></use></svg>
+                </a></li>
+              </ul>
             </li>
           </ul>
         </div>
       </section>
+    </section>
+    <section class="clients section">
+        <div class="container">
+            <h2 class="clients-header">Постоянные клиенты</h2>
+            <ul class="clients">
+                <li class="clients-item list">
+                    <a href="" class="clients-item-link">
+                        <svg class="client-item-icon" width="106" height="60">
+                            <use href="./images/icons..svg#icon-client1"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="clients-item list">
+                    <a href="" class="clients-item-link">
+                        <svg class="client-item-icon" width="106" height="60">
+                            <use href="./images/icons..svg#icon-client2"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="clients-item list">
+                    <a href="" class="clients-item-link">
+                        <svg class="client-item-icon" width="106" height="60">
+                            <use href="./images/icons..svg#icon-client3"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="clients-item list">
+                    <a href="" class="clients-item-link">
+                        <svg class="client-item-icon" width="106" height="60">
+                            <use href="./images/icons..svg#icon-client4"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="clients-item list">
+                    <a href="" class="clients-item-link">
+                        <svg class="client-item-icon" width="106" height="60">
+                            <use href="./images/icons..svg#icon-client5"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="clients-item list">
+                    <a href="" class="clients-item-link">
+                        <svg class="client-item-ico" width="106" height="60">
+                            <use href="./images/icons..svg#icon-client6"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+
+        </div>
+    </section>
     </main>
     <footer class="footer">
       <div class="container">
@@ -191,6 +298,39 @@
           </ul>
         </address>
       </div>
+      <div class="join">
+        <h3 class="join-header">Присоединяйтесь</h3>
+        <ul class="join-list">
+            <li class="list join-item">
+                <a href="" class="join-link">
+                    <svg class="join-ico" width="20" height="20">
+                        <use href="images/icons..svg#icon-instagram"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="list join-item">
+                <a href="" class="join-link">
+                    <svg class="join-icon" width="20" height="20">
+                        <use href="./images/icons..svg#icon-twitter"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="list join-item">
+                <a href="" class="join-link">
+                    <svg class="join-icon" width="20" height="20">
+                        <use href="./images/icons..svg#icon-facebook"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="list join-item">
+                <a href="" class="join-link">
+                    <svg class="join-icon" width="20" height="20">
+                        <use href="./images/icons..svg#icon-linkedin"></use>
+                    </svg>
+                </a>
+            </li>
+        </ul>
+    </div>
     </footer>
   </body>
 </html>
