--- a/portfolio.html
+++ b/portfolio.html
@@ -28,20 +28,22 @@
           <a class="link header-logo" href="./index.html"><span class="web">Web</span>Studio</a>
           <ul class="list header-list">
             <li class="header-item">
-              <a class="navigation link" href="index.html">Cтудия</a>
+              <a class="navigation current link" href="index.html">Cтудия</a>
             </li>
             <li class="header-item">
-              <a class="navigation current link" href="portfolio.html">Портфолио</a>
+              <a class="navigation link" href="portfolio.html">Портфолио</a>
             </li>
             <li class="header-item"><a href="" class="navigation link">Контакты</a></li>
           </ul>
         </nav>
         <ul class="header-contact list">
           <li class="contact-item">
-            <a class="email link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="email link" href="mailto:info@devstudio.com">
+            <svg class="envelope-icon"><use href="images/icons..svg#icon-envelope"></use></svg>info@devstudio.com</a>
           </li>
           <li class="contact-item">
-            <a class="phone link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="phone link" href="tel:+380961111111">
+              <svg class="envelope-icon"><use href="images/icons..svg#icon-phone"></use></svg>+38 096 111 11 11</a>
           </li>
         </ul>
       </div>
@@ -162,6 +164,39 @@
           </ul>
         </address>
       </div>
+      <div class="join">
+        <h3 class="join-header">Присоединяйтесь</h3>
+        <ul class="join-list">
+            <li class="list join-item">
+                <a href="" class="join-link">
+                    <svg class="join-ico" width="20" height="20">
+                        <use href="images/icons..svg#icon-instagram"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="list join-item">
+                <a href="" class="join-link">
+                    <svg class="join-icon" width="20" height="20">
+                        <use href="./images/icons..svg#icon-twitter"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="list join-item">
+                <a href="" class="join-link">
+                    <svg class="join-icon" width="20" height="20">
+                        <use href="./images/icons..svg#icon-facebook"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="list join-item">
+                <a href="" class="join-link">
+                    <svg class="join-icon" width="20" height="20">
+                        <use href="./images/icons..svg#icon-linkedin"></use>
+                    </svg>
+                </a>
+            </li>
+        </ul>
+    </div>
     </footer>
   </body>
 </html>
