--- a/index.html
+++ b/index.html
@@ -227,43 +227,43 @@
             <h2 class="clients-header">Постоянные клиенты</h2>
             <ul class="clients">
                 <li class="clients-item list">
-                    <a href="" class="clients-item-link">
+                    <a href="client-link" class="clients-item-link">
                         <svg class="client-item-icon" width="106" height="60">
                             <use href="./images/icons..svg#icon-client1"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="clients-item list">
-                    <a href="" class="clients-item-link">
+                    <a href="client-link" class="clients-item-link">
                         <svg class="client-item-icon" width="106" height="60">
                             <use href="./images/icons..svg#icon-client2"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="clients-item list">
-                    <a href="" class="clients-item-link">
+                    <a href="client-link" class="clients-item-link">
                         <svg class="client-item-icon" width="106" height="60">
                             <use href="./images/icons..svg#icon-client3"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="clients-item list">
-                    <a href="" class="clients-item-link">
+                    <a href="client-link" class="clients-item-link">
                         <svg class="client-item-icon" width="106" height="60">
                             <use href="./images/icons..svg#icon-client4"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="clients-item list">
-                    <a href="" class="clients-item-link">
+                    <a href="client-link" class="clients-item-link">
                         <svg class="client-item-icon" width="106" height="60">
                             <use href="./images/icons..svg#icon-client5"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="clients-item list">
-                    <a href="" class="clients-item-link">
-                        <svg class="client-item-ico" width="106" height="60">
+                    <a href="client-link" class="clients-item-link">
+                        <svg class="client-item-icon" width="106" height="60">
                             <use href="./images/icons..svg#icon-client6"></use>
                         </svg>
                     </a>
