--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         </div>
       </section>
     </section>
-    <section class="clients section">
+    <section class="clients-section">
         <div class="container">
             <h2 class="clients-header">Постоянные клиенты</h2>
             <ul class="clients">
@@ -275,6 +275,7 @@
     </main>
     <footer class="footer">
       <div class="container">
+        <div>
         <a class="link logo_footer" href="./index.html"
           ><span class="web_footer">Web</span>Studio</a
         >
@@ -298,12 +299,12 @@
           </ul>
         </address>
       </div>
-      <div class="join">
+      <div class="footer-soc">
         <h3 class="join-header">Присоединяйтесь</h3>
         <ul class="join-list">
             <li class="list join-item">
                 <a href="" class="join-link">
-                    <svg class="join-ico" width="20" height="20">
+                    <svg class="join-icon" width="20" height="20">
                         <use href="images/icons..svg#icon-instagram"></use>
                     </svg>
                 </a>
@@ -330,6 +331,7 @@
                 </a>
             </li>
         </ul>
+      </div>
     </div>
     </footer>
   </body>
