--- a/portfolio.html
+++ b/portfolio.html
@@ -68,7 +68,6 @@
             </li>
           </ul>
 
-        
           <ul class="porfolio list">
             <li class="portfolio-item">
               <img src="images/teamcard1.jpg" width="370" height="294" alt="командная фото" />
@@ -137,10 +136,13 @@
             </li>
           </ul>
         </div>
+        
       </section>
+    </container>
     </main>
     <footer class="footer">
       <div class="container">
+        <div>
         <a class="link logo_footer" href="./index.html"
           ><span class="web_footer">Web</span>Studio</a
         >
@@ -164,12 +166,12 @@
           </ul>
         </address>
       </div>
-      <div class="join">
+      <div class="footer-soc">
         <h3 class="join-header">Присоединяйтесь</h3>
         <ul class="join-list">
             <li class="list join-item">
                 <a href="" class="join-link">
-                    <svg class="join-ico" width="20" height="20">
+                    <svg class="join-icon" width="20" height="20">
                         <use href="images/icons..svg#icon-instagram"></use>
                     </svg>
                 </a>
@@ -196,6 +198,7 @@
                 </a>
             </li>
         </ul>
+      </div>
     </div>
     </footer>
   </body>
