--- a/portfolio.html
+++ b/portfolio.html
@@ -39,11 +39,11 @@
         <ul class="header-contact list">
           <li class="contact-item">
             <a class="email link" href="mailto:info@devstudio.com">
-            <svg class="envelope-icon"><use href="images/icons..svg#icon-envelope"></use></svg>info@devstudio.com</a>
+            <svg class="envelope-icon"><use href="/images/icons.svg#icon-envelope-1"></use></svg>info@devstudio.com</a>
           </li>
           <li class="contact-item">
             <a class="phone link" href="tel:+380961111111">
-              <svg class="envelope-icon"><use href="images/icons..svg#icon-phone"></use></svg>+38 096 111 11 11</a>
+              <svg class="envelope-icon"><use href="images/icons.svg#icon-phone"></use></svg>+38 096 111 11 11</a>
           </li>
         </ul>
       </div>
@@ -70,11 +70,13 @@
 
           <ul class="porfolio list">
             <li class="portfolio-item">
+              <a class="portfolio-link" href=""></a>
               <img src="images/teamcard1.jpg" width="370" height="294" alt="командная фото" />
               <div class="portfolio-description"><h2 class="portfolio-items-title">Технокряк</h2>
               <p class="portfolio-item-text">Веб-сайт</p></div>
             </li>
             <li class="portfolio-item">
+              <a class="portfolio-link" href=""></a>
               <img
                 src="images/teamcard2.jpg"
                 width="370"
@@ -85,6 +87,7 @@
               <p class="portfolio-item-text">Дизайн</p>
             </div></li>
             <li class="portfolio-item">
+              <a class="portfolio-link" href=""></a>
               <img
                 src="images/teamcard3.jpg"
                 width="370"
@@ -95,16 +98,19 @@
               <p class="portfolio-item-text">Приложение</p></div>
             </li>
             <li class="portfolio-item">
+              <a class="portfolio-link" href=""></a>
               <img src="images/teamcard4.jpg" width="370" height="294" alt="наушники" />
               <div class="portfolio-description"><h2 class="portfolio-items-title">Проект Prime</h2>
               <p class="portfolio-item-text">Маркетинг</p></div>
             </li>
             <li class="portfolio-item">
+              <a class="portfolio-link" href=""></a>
               <img src="images/teamcard5.jpg" width="370" height="294" alt="две коробки" />
               <div class="portfolio-description"><h2 class="portfolio-items-title">Проект Boxes</h2>
               <p class="portfolio-item-text">Приложение</p></div>
             </li>
             <li class="portfolio-item">
+              <a class="portfolio-link" href=""></a>
               <img
                 src="images/teamcard6.jpg"
                 width="370"
@@ -115,16 +121,19 @@
               <p class="portfolio-item-text">Веб-сайт</p></div>
             </li>
             <li class="portfolio-item">
+              <a class="portfolio-link" href=""></a>
               <img src="images/teamcard7.jpg" width="370" height="294" alt="разворот журнала" />
               <div class="portfolio-description"><h2 class="portfolio-items-title">Издание Limited Edition</h2>
               <p class="portfolio-item-text">Дизайн</p></div>
             </li>
             <li class="portfolio-item">
+              <a class="portfolio-link" href=""></a>
               <img src="images/teamcard8.jpg" width="370" height="294" alt="бирка на одежде" />
               <div class="portfolio-description"><h2 class="portfolio-items-title">Проект LAB</h2>
               <p class="portfolio-item-text">Маркетинг</p></div>
             </li>
             <li class="portfolio-item">
+              <a class="portfolio-link" href=""></a>
               <img
                 src="images/teamcard9.jpg"
                 width="370"
@@ -168,32 +177,32 @@
       </div>
       <div class="footer-soc">
         <h3 class="join-header">Присоединяйтесь</h3>
-        <ul class="join-list">
+        <ul class="join-list list">
             <li class="list join-item">
                 <a href="" class="join-link">
                     <svg class="join-icon" width="20" height="20">
-                        <use href="images/icons..svg#icon-instagram"></use>
+                        <use href="images/icons.svg#icon-instagram"></use>
                     </svg>
                 </a>
             </li>
             <li class="list join-item">
                 <a href="" class="join-link">
                     <svg class="join-icon" width="20" height="20">
-                        <use href="./images/icons..svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                 </a>
             </li>
             <li class="list join-item">
                 <a href="" class="join-link">
                     <svg class="join-icon" width="20" height="20">
-                        <use href="./images/icons..svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                 </a>
             </li>
             <li class="list join-item">
                 <a href="" class="join-link">
                     <svg class="join-icon" width="20" height="20">
-                        <use href="./images/icons..svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                 </a>
             </li>
