--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
         <ul class="header-contact list">
           <li class="contact-item">
             <a class="email link" href="mailto:info@devstudio.com">
-            <svg class="envelope-icon"><use href="/images/icons.svg#icon-envelope-1"></use></svg>info@devstudio.com</a>
+            <svg class="envelope-icon"><use href="images/icons.svg#icon-envelope-1"></use></svg>info@devstudio.com</a>
           </li>
           <li class="contact-item">
             <a class="phone link" href="tel:+380961111111">
-              <svg class="envelope-icon"><use href="images/icons.svg#icon-phone"></use></svg>+38 096 111 11 11</a>
+              <svg class="phone-icon"><use href="images/icons.svg#icon-phone"></use></svg>+38 096 111 11 11</a>
           </li>
         </ul>
       </div>
@@ -302,7 +302,7 @@
         </address>
       </div>
       <div class="footer-soc">
-        <h3 class="join-header">Присоединяйтесь</h3>
+        <p class="join-header">Присоединяйтесь</p>
         <ul class="join-list list">
             <li class="list join-item">
                 <a href="" class="join-link">
