--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
         <ul class="header-contact list">
           <li class="contact-item">
             <a class="email link" href="mailto:info@devstudio.com">
-            <svg class="envelope-icon"><use href="images/icons.svg#icon-envelope-1"></use></svg>info@devstudio.com</a>
+            <svg class="email-icon"><use href="images/icons.svg#icon-envelope-1"></use></svg>info@devstudio.com</a>
           </li>
           <li class="contact-item">
             <a class="phone link" href="tel:+380961111111">
