--- a/portfolio.html
+++ b/portfolio.html
@@ -176,7 +176,7 @@
         </address>
       </div>
       <div class="footer-soc">
-        <h3 class="join-header">Присоединяйтесь</h3>
+        <p class="join-header">Присоединяйтесь</p>
         <ul class="join-list list">
             <li class="list join-item">
                 <a href="" class="join-link">
